Renamed files so they properly link to home.html. Fixed dropdown menu issue where it is beneath the trending stocks table by changing the z-index of left column. Fixed login unit test that ensures google login authentication.

--- a/index_css.css
+++ b/index_css.css
@@ -223,6 +223,7 @@ table, th, td {
 	padding-bottom: 10px;
 	text-align: center;
 	float: left;
+	z-index: -1;
 }
 .column_right{
 	flex: 50%;
